# ownable-std

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  release-plz.toml
.github/workflows/: release-plz.yml  tests.yml
macros/ownable-std-macros/: CHANGELOG.md  Cargo.toml
macros/ownable-std-macros/src/: lib.rs
src/: attachment.rs  env.rs  external_event.rs  ingest.rs  lib.rs  memory_storage.rs  metadata.rs  ownership.rs  public_event.rs  register.rs  storage.rs
src/abi/: mod.rs
