[workspace]
members = [".", "macros/ownable-std-macros"]

[workspace.package]
version = "0.4.0"

[package]
name = "ownable-std"
description = "utils library for eqty ownable contracts"
version.workspace = true
edition = "2024"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["macros"]
macros = ["dep:ownable-std-macros"]

[dependencies]
cosmwasm-std = "3"
ownable-std-macros = { version = "=0.4.0", path = "macros/ownable-std-macros", optional = true }
serde = { version = "1.0.137", default-features = false, features = ["derive"] }
serde_with = "2.0.1"
hex = "0.4.3"
schemars = "0.8.8"
wasm-bindgen = { version = "0.2.63", features = ["serde-serialize"] }
serde_json = "1.0.59"
js-sys = "0.3.56"

[dev-dependencies]
